crates/test-files/fixtures/compile_errors/ctx_undefined_create2.fe
contract Bar {}

contract Foo {
    pub fn baz() {
        Bar.create2(0, 0)
    }
}
